force-app/main/default/objects/Lead/fields/Est_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Revenue__c</fullName>
    <label>Est. Revenue</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>