force-app/main/default/objects/Lead/fields/Est_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Start_Date__c</fullName>
    <label>Est Start Date</label>
    <type>Date</type>
</CustomField>